# DA-Project

./: .gitignore  CMakeLists.txt  README.md  run  task_division.md
data/input/: input.csv
docs/: Doxyfile
docs/html/: AssignmentEngine_8cpp.html  AssignmentEngine_8cpp__incl.map  AssignmentEngine_8cpp__incl.md5  AssignmentEngine_8cpp_source.html  AssignmentEngine_8h.html  AssignmentEngine_8h.js  AssignmentEngine_8h__dep__incl.map  AssignmentEngine_8h__dep__incl.md5  AssignmentEngine_8h__incl.map  AssignmentEngine_8h__incl.md5  AssignmentEngine_8h_source.html  Config_8h.html  Config_8h__dep__incl.map  Config_8h__dep__incl.md5  Config_8h__incl.map  Config_8h__incl.md5  Config_8h_source.html  CsvParser_8cpp.html  CsvParser_8cpp__incl.map  CsvParser_8cpp__incl.md5  CsvParser_8cpp_source.html  CsvParser_8h.html  CsvParser_8h.js  CsvParser_8h__dep__incl.map  CsvParser_8h__dep__incl.md5  CsvParser_8h__incl.map  CsvParser_8h__incl.md5  CsvParser_8h_source.html  Doxyfile  Graph_8cpp.html  Graph_8cpp__incl.map  Graph_8cpp__incl.md5  Graph_8cpp_source.html  Graph_8h.html  Graph_8h.js  Graph_8h__dep__incl.map  Graph_8h__dep__incl.md5  Graph_8h__incl.map  Graph_8h__incl.md5  Graph_8h_source.html  (+179 more)
include/core/: AssignmentEngine.h  AssingnmentEngine.h  OutputWriter.h  RiskAnalyzer.h
include/graph/: Graph.h  MaxFlow.h
include/model/: Config.h  Reviewer.h  Submission.h
include/parser/: CsvParser.h
include/ui/: Menu.h
src/: main.cpp
src/core/: AssignmentEngine.cpp  OutputWriter.cpp  RiskAnalyzer.cpp
src/graph/: Graph.cpp  MaxFlow.cpp
src/model/: Submission.cpp
(+65 files in other folders)
